testdata/asm/invalid/basic_03.zkasm
;;error:3:7-8:variable already declared
fn f(x u16) -> (r u2) {
  var x u16
  r = 1
  return
}
